--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="./assets/fontawesome-free-6.0.0-web/css/all.css">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="background">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
